--- a/compose.yml
+++ b/compose.yml
@@ -1,9 +1,34 @@
+x-logging: &logging
+  driver: "json-file"
+  options:
+    max-size: "10m"
+    max-file: "3"
+
 services:
   redis:
-    image: redis:alpine
+    image: redis:${REDIS_VERSION}
+    restart: unless-stopped
+    logging: *logging
 
   yopass:
-    image: jhaals/yopass
+    image: jhaals/yopass:${YOPASS_VERSION}
+    restart: unless-stopped
     ports:
-      - "1337:1337"
+      - ${YOPASS_PORT}:1337
     command: "--database=redis --redis=redis://redis:6379/0"
+    logging: *logging
+
+  prometheus:
+    image: prom/prometheus:${PROMETHEUS_VERSION}
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention.time=30d'
+      - '--storage.tsdb.wal-compression'
+      - '--web.enable-lifecycle'
+    restart: unless-stopped
+    ports:
+      - ${PROMETHEUS_PORT}:9090
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    logging: *logging
