--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REDIS_VERSION
+REDIS_VERSION=alpine
 
-YOPASS_VERSION=alpine
+YOPASS_VERSION=latest
 YOPASS_PORT=1337
 
-PROMETHEUS_VERSION=
+PROMETHEUS_VERSION=latest
 PROMETHEUS_PORT=9090
