--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -9,7 +9,7 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: keycloak
+  - job_name: yopass
     metrics_path: /metrics
     static_configs:
       - targets: ['yopass:8080']
