--- a/compose.yml
+++ b/compose.yml
@@ -32,3 +32,13 @@ services:
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
     logging: *logging
+
+  grafana:
+    image: grafana/grafana-oss:${GF_VERSION}
+    restart: unless-stopped
+    ports:
+      - ${GF_SERVER_HTTP_PORT}:3000
+    volumes:
+      - ./grafana/dashboards:/etc/grafana/provisioning/dashboards:ro
+      - ./grafana/datasources:/etc/grafana/provisioning/datasources:ro
+    logging: *logging
