--- a/compose.yml
+++ b/compose.yml
@@ -15,7 +15,7 @@ services:
     restart: unless-stopped
     ports:
       - ${YOPASS_PORT}:1337
-    command: "--database=redis --redis=redis://redis:6379/0 --metrics-port=8080"
+    command: "--database=redis --redis=redis://redis:6379/0 --metrics-port=8080 --max-length=300000"
     logging: *logging
 
   prometheus:
