--- a/compose.yml
+++ b/compose.yml
@@ -16,6 +16,8 @@ services:
     ports:
       - ${YOPASS_PORT}:1337
     command: "--database=redis --redis=redis://redis:6379/0 --metrics-port=8080 --max-length=300000"
+    volumes:
+      - ./locales/ru.json:/website/public/locales/ru.json:ro
     logging: *logging
 
   prometheus:
